--- a/supermarket/templates/supermarket/sobre.html
+++ b/supermarket/templates/supermarket/sobre.html
@@ -1,10 +1,10 @@
 {% extends "supermarket/layout.html" %}
 {% block class_sobre %} class="active" {% endblock %}
-{% block titulo %} SuperMarket - Sobre{% endblock %}
+{% block titulo %}Sobre - SuperMarket{% endblock %}
 
 {% block principal %}
     <h2 class="page-header">Sobre o SuperMarket</h2><br>
-    <p>A Internet vem tomando proporções cada vez maiores e, com isso,
+    <p class="p">A Internet vem tomando proporções cada vez maiores e, com isso,
         influenciando nosso cotidiano e modificando completamente o comportamento da sociedade. Uma das
         grandes
         evoluções da tecnologia, que acarretaram tal mobilidade, foi o lançamento dos smartphones e seus
@@ -15,7 +15,7 @@
         assim, o presente projeto objetiva desenvolver um aplicativo para dispositivos móveis, plataforma
         Android, que promova a divulgação de promoções de supermercados aos consumidores, inicialmente do
         município de Cacoal/RO.</p>
-    <p>O desenvolvimento do aplicativo será feito com base no paradigma de
+    <p class="p">O desenvolvimento do aplicativo será feito com base no paradigma de
         programação
         orientada a objetos em conjunto com sistema de banco de dados. Almeja-se que o aplicativo
         possibilite,
