--- a/static/css/supermarket.css
+++ b/static/css/supermarket.css
@@ -4,6 +4,10 @@ body {
 
 p {
     text-align: justify;
+}
+
+.p {
+    text-align: justify;
     text-indent: 25px;
 }
 
@@ -31,4 +35,126 @@ footer {
     text-align: center;
     font-weight: bold;
     font-size: 8pt;
+    border-top: 1px solid #eee;
+    line-height: 1;
+    margin-top: 10px;
+
+}
+
+.aa-input-container {
+    display: inline-block;
+    position: relative;
+}
+
+.aa-input-search {
+    min-width: 400px;
+    padding: 12px 28px 12px 12px;
+    border: 3px solid #e4e4e4;
+    border-radius: 4px;
+    -webkit-transition: .2s;
+    transition: .2s;
+    #font-family: "Montserrat", sans-serif;
+    box-shadow: 4px 4px 0 rgba(241, 241, 241, 0.35);
+    #font-size: 11px;
+    box-sizing: border-box;
+    color: #333;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+
+}
+
+.aa-input-search::-webkit-search-decoration, .aa-input-search::-webkit-search-cancel-button,
+.aa-input-search::-webkit-search-results-button, .aa-input-search::-webkit-search-results-decoration {
+    display: none;
+}
+
+.aa-input-search:focus {
+    outline: 0;
+    border-color: #B2FEB2;
+    box-shadow: 4px 4px 0 rgba(58, 150, 207, 0.1);
+}
+
+.aa-input-icon {
+    height: 16px;
+    width: 16px;
+    position: absolute;
+    top: 50%;
+    right: 16px;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    fill: #e4e4e4;
+    pointer-events: none;
+}
+
+.aa-dropdown-menu {
+    background-color: #fff;
+    border: 3px solid rgba(228, 228, 228, 0.6);
+    border-top-width: 1px;
+    font-family: "Montserrat", sans-serif;
+    width: 400px;
+    margin-top: 7px;
+    box-shadow: 4px 4px 0 rgba(241, 241, 241, 0.35);
+    font-size: 13px;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.aa-suggestion {
+    padding: 10px;
+    border-top: 2px solid rgba(228, 228, 228, 0.6);
+    cursor: pointer;
+    -webkit-transition: .2s;
+    transition: .2s;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.aa-suggestion > span:first-child {
+    color: #333;
+}
+
+.aa-suggestion > span:last-child {
+    text-transform: uppercase;
+    color: #a9a9a9;
+}
+
+.aa-suggestion > span:first-child em,
+.aa-suggestion > span:last-child em {
+    font-weight: 700;
+    font-style: normal;
+    background-color: rgba(58, 150, 207, 0.1);
+    padding: 2px 0 2px 2px;
+}
+
+.aa-dropdown-menu .aa-suggestion em {
+    font-weight: bold;
+    font-style: normal;
+}
+
+.aa-suggestion:hover, .aa-suggestion.aa-cursor {
+    background-color: rgba(143, 254, 143, 0.35);
+}
+
+.aa-suggestions-category {
+    border-bottom: 1px solid rgba(228, 228, 228, 0.6);
+    border-top: 1px solid rgba(228, 228, 228, 0.6);
+    padding: 6px 12px;
+}
+
+.aa-dropdown-menu > div {
+    display: inline-block;
+    width: 100%;
+    vertical-align: top;
+}
+
+.aa-empty {
+    padding: 6px 12px;
 }
