--- a/supermarket/templates/supermarket/contato.html
+++ b/supermarket/templates/supermarket/contato.html
@@ -1,5 +1,8 @@
 {% extends "supermarket/layout.html" %}
+
 {% block class_contato %} class="active" {% endblock %}
+
+{% block titulo %}Contato - SuperMarket{% endblock %}
 
 {% block principal %}
     <h2 class="page-header">Entre em contato conosco</h2>
