--- a/supermarket/templates/supermarket/contato.html
+++ b/supermarket/templates/supermarket/contato.html
@@ -1,7 +1,5 @@
-{% extends "supermarket/layout.html" %}
-
+{% extends "layout.html" %}
 {% block class_contato %} class="active" {% endblock %}
-
 {% block titulo %}Contato - SuperMarket{% endblock %}
 
 {% block principal %}
