--- a/supermarket/templates/supermarket/filtro.html
+++ b/supermarket/templates/supermarket/filtro.html
@@ -1,4 +1,4 @@
-{% extends "supermarket/layout.html" %}
+{% extends "supermarket/../layout.html" %}
 
 {% block titulo %} SuperMarket {% endblock %}
 
