--- a/supermarket/templates/supermarket/promocoes.html
+++ b/supermarket/templates/supermarket/promocoes.html
@@ -1,4 +1,4 @@
-{% extends "supermarket/layout.html" %}
+{% extends "supermarket/../layout.html" %}
 {% block class_promocoes %} class="active" {% endblock %}
 {% block titulo %}Promoções - SuperMarket{% endblock %}
 
