--- a/supermarket/templates/supermarket/sobre.html
+++ b/supermarket/templates/supermarket/sobre.html
@@ -1,9 +1,9 @@
-{% extends "supermarket/layout.html" %}
+{% extends "layout.html" %}
 {% block class_sobre %} class="active" {% endblock %}
 {% block titulo %}Sobre - SuperMarket{% endblock %}
 
 {% block principal %}
-    <h2 class="page-header">Sobre o SuperMarket</h2><br>
+    <h2 class="page-header">Sobre o SuperMarket</h2>
     <p class="p">A Internet vem tomando proporções cada vez maiores e, com isso,
         influenciando nosso cotidiano e modificando completamente o comportamento da sociedade. Uma das
         grandes
