--- a/static/css/supermarket.css
+++ b/static/css/supermarket.css
@@ -1,5 +1,39 @@
+.navbar {
+    margin-bottom: 0;
+    border-radius: 0;
+}
+
+.navbar-brand a img {
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.navbar-brand-market {
+    padding: 5px 0;
+}
+
+.navbar-brand-market img {
+    margin-top: 2px;
+    margin-left: 15px;
+}
+
+.container {
+    padding: 2px 16px;
+}
+
+html {
+    font-size: 10px;
+    -webkit-tap-highlight-color: transparent;
+}
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    line-height: 1.42857;
+    color: #333333;
+    background-color: #fff;
 }
 
 p {
@@ -16,7 +50,6 @@ h2 {
     text-transform: uppercase;
     color: #303030;
     font-weight: 600;
-    margin-bottom: 30px;
 }
 
 h4 {
@@ -24,21 +57,27 @@ h4 {
     line-height: 1.375em;
     color: #303030;
     font-weight: 400;
-    margin-bottom: 30px;
 }
 
 footer {
-    background-color: #195128;
-    color: white;
-    padding: 10px;
-    text-indent: 0px;
-    text-align: center;
-    font-weight: bold;
-    font-size: 8pt;
+    /*background-color: #195128;*/
+    /*color: white;*/
+    /*padding: 10px;*/
+    /*font-size: 8pt;*/
+    /*font-weight: bold;*/
+    /*text-align: center;*/
+
+    background-color: #f7f7f7;
     border-top: 1px solid #eee;
     line-height: 1;
-    margin-top: 10px;
+    padding: 25px 0 15px 0;
+    display: block;
+}
 
+footer p {
+    font-size: 0.9em;
+    color: #999;
+    text-align: center;
 }
 
 .aa-input-container {
