--- a/supermarket/templates/supermarket/novo_produto.html
+++ b/supermarket/templates/supermarket/novo_produto.html
@@ -1,4 +1,4 @@
-{% extends "supermarket/layout.html" %}
+{% extends "supermarket/../layout.html" %}
 
 {% block titulo %} SuperMarket - Novo Produto {% endblock %}
 
