--- a/login/templates/registration/login.html
+++ b/login/templates/registration/login.html
@@ -3,14 +3,19 @@
 {% block title %}Login - SuperMarket{% endblock %}
 
 {% block principal %}
-    <h2 class="page-header">Login</h2>
-    <form method="post">
-        {% csrf_token %}
-        <input class="form-control" placeholder="Usuário" input type="text" name="username" autofocus
-               maxlength="254" required id="id_username"/><br>
-        <input class="form-control" placeholder="Senha" type="password" name="password" required
-               id="id_password"/>
-        <br>
-        <input type="submit" class="btn btn-primary" value="Login">
-    </form>
+    <section class="section-content">
+        <div class="container-login">
+            <h2 class="page-header">Login</h2>
+            <form method="post">
+                {% csrf_token %}
+                <input class="form-control" placeholder="Usuário" input type="text" name="username" autofocus
+                       maxlength="254" required id="id_username"/><br>
+                <input class="form-control" placeholder="Senha" type="password" name="password" required
+                       id="id_password"/>
+                <br>
+                <input type="submit" class="btn btn-primary" value="Login"><em class="pull-right">Sem login? <a
+                    href="{% url 'login_register' %}">Cadastre-se aqui!</a></em>
+            </form>
+        </div>
+    </section>
 {% endblock %}
