--- a/login/templates/registration/success.html
+++ b/login/templates/registration/success.html
@@ -3,6 +3,10 @@
 {% block title %}Registro de usuário realizado - SuperMarket{% endblock %}
 
 {% block principal %}
-    <h2 class="page-header">Seja bem-vindo</h2>
-    <p class="alert alert-success"><strong>Usuário criado com sucesso!</strong></p>
+    <section class="section-content">
+        <div class="container">
+            <h2 class="page-header">Seja bem-vindo</h2>
+            <p class="alert alert-success"><strong>Usuário criado com sucesso!</strong></p>
+        </div>
+    </section>
 {% endblock %}
