--- a/supermarket/templates/supermarket/home.html
+++ b/supermarket/templates/supermarket/home.html
@@ -3,7 +3,11 @@
 {% load static %}
 
 {% block principal %}
-    <h2 class="page-header">SuperMarket</h2>
-    <p>Uma nova experiência em pesquisa de produtos de supermercados.</p>
-    <img class="img-responsive" src=" {% static '/img/logo_top.png' %}" alt="SuperMarket">
+    <section class="section-content">
+        <div class="container">
+            <h2 class="page-header">Mercado com desconto</h2>
+            <p>Uma nova experiência em pesquisa de produtos de supermercados</p>
+            <img class="img-responsive" src=" {% static '/img/logo_top.png' %}" alt="Mercado com desconto">
+        </div>
+    </section>
 {% endblock %}
