--- a/supermarket/templates/layout.html
+++ b/supermarket/templates/layout.html
@@ -41,7 +41,7 @@
                         class="fa fa-home" style="font-size:16px"></i>
                     Home</a></li>
                 <li{% block class_promocoes %}{% endblock %}><a href="{% url 'supermarket.promocoes' %}"><i
-                        class="fa fa-question-shopping-cart" style="font-size:16px"></i>
+                        class="fa fa-shopping-cart" style="font-size:16px"></i>
                     Promoções</a></li>
                 <li {% block class_sobre %}{% endblock %}><a href="{% url 'supermarket.sobre' %}"><i
                         class="fa fa-question-circle-o" style="font-size:16px"></i>
@@ -55,25 +55,26 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                            aria-expanded="false"><i
-                                class="fa fa-user-o" style="font-size:16px;"></i><span> {{ request.user.username }}</span></a>
+                                class="fa fa-user-o"
+                                style="font-size:16px;"></i><span> {{ request.user.username }}</span></a>
                         <ul class="dropdown-menu">
-{#                            <li>#}
-{#                                <a href="#"><i#}
-{#                                        class="fa fa-pencil-square-o" style="font-size:16px"></i> Nova promoção</a>#}
-{#                            </li>#}
-{#                            <li>#}
-{#                                <a href="#"><i#}
-{#                                    class="fa fa-pencil-square" style="font-size:16px"></i> Minhas promoções</a>#}
-{#                            </li>#}
-{#                            <li class="divider"></li>#}
+                            <li>
+                                <a href="#"><i
+                                        class="fa fa-pencil-square-o" style="font-size:16px"></i> Nova promoção</a>
+                            </li>
+                            <li>
+                                <a href="#"><i
+                                        class="fa fa-pencil-square" style="font-size:16px"></i> Minhas promoções</a>
+                            </li>
+                            <li class="divider"></li>
                             <li>
                                 <a href="{% url 'admin:login' %}" target="_blank"><i
-                                    class="fa fa-tasks" style="font-size:16px"></i> Admin</a>
+                                        class="fa fa-tasks" style="font-size:16px"></i> Admin</a>
                             </li>
-{#                            <li>#}
-{#                                <a href="#"><i#}
-{#                                    class="fa fa-user-circle-o" style="font-size:16px"></i> Meus dados</a>#}
-{#                            </li>#}
+                            <li>
+                                <a href="#"><i
+                                        class="fa fa-user-circle-o" style="font-size:16px"></i> Meus dados</a>
+                            </li>
                             <li class="divider"></li>
                             <li>
                                 <a href="{% url 'logout' %}"><i
@@ -83,19 +84,31 @@
                         </ul>
                     </li>
                 {% else %}
-                    <li><a href="{% url 'login' %}"><i
-                            class="fa fa-lock" style="font-size:16px;"></i> Login</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                           aria-expanded="false"><i class="fa fa-lock"></i> Acesso</a>
+                        <ul class="dropdown-menu">
+                            <li class="divider"></li>
+                            <li>
+                                <a href="{% url 'login_register' %}"><i
+                                        class="fa fa-address-card-o" style="font-size:16px;"></i> Cadastre-se</a>
+                            </li>
+                            <li>
+                                <a href="{% url 'login' %}"><i
+                                        class="fa fa-sign-in" style="font-size:16px;"></i> Login</a>
+                            </li>
+
+                        </ul>
+                    </li>
                 {% endif %}
             </ul>
         </div>
     </div>
 </nav>
 
-<div class="container">
-    {% block principal %} {% endblock %}
-</div>
+{% block principal %} {% endblock %}
 
-<footer>
+<footer class="footer-market">
     <p>Copyright © - Todos os direitos reservados</p>
 </footer>
 
