--- a/login/templates/registration/login.html
+++ b/login/templates/registration/login.html
@@ -4,7 +4,7 @@
 
 {% block principal %}
     <section class="section-content">
-        <div class="container-login">
+        <div class="container">
             <h2 class="page-header">Login</h2>
             <form method="post">
                 {% csrf_token %}
