--- a/supermarket/templates/layout.html
+++ b/supermarket/templates/layout.html
@@ -3,7 +3,7 @@
 <html lang="pt-br">
 <head>
     {% block head %} {% endblock %}
-    <title>{% block titulo %}SuperMarket{% endblock %}</title>
+    <title>{% block titulo %}Mercado com desconto{% endblock %}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -77,8 +77,8 @@
                             </li>
                             <li class="divider"></li>
                             <li>
-                                <a href="{% url 'logout' %}"><i
-                                        class="fa fa-power-off" style="font-size:16px;"></i> Sair</a>
+                                <a data-toggle="modal" href="#modal-logout"><i
+                                        class="fa fa-sign-out" style="font-size:16px;"></i> Sair</a>
                             </li>
 
                         </ul>
@@ -113,4 +113,38 @@
 </footer>
 
 </body>
+<!-- Modal LOGOUT-->
+<div class="modal fade" id="modal-logout" role="dialog">
+    <div class="modal-dialog modal-sm">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <form method="POST" action="{% url 'logout' %}" class="post-form">
+                {% csrf_token %}
+
+                <div class="modal-header" style="padding:15px 50px;">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                    <h3 class="modal-title"><span class="glyphicon glyphicon-off"></span> Logout</h3>
+                </div>
+
+                <div class="modal-body" style="padding:10px 10px;">
+                    <p class="text-center">Deseja realmente sair?</p>
+                </div>
+
+                <div class="modal-footer">
+                    <div class="col-sm-6">
+                        <button type="submit" class="btn btn-default btn-block" data-dismiss="modal" autofocus/>
+                        Cancelar</button>
+                    </div>
+                    <div class="col-sm-6">
+                        <button type="submit" class="btn btn-danger btn-block">Sair</button>
+                    </div>
+                </div>
+
+            </form>
+        </div>
+    </div>
+</div>
 </html>
