--- a/supermarket/templates/layout.html
+++ b/supermarket/templates/layout.html
@@ -72,7 +72,7 @@
                                         class="fa fa-tasks" style="font-size:16px"></i> Admin</a>
                             </li>
                             <li>
-                                <a href="#"><i
+                                <a href="{% url 'supermarket.meus_dados' %}"><i
                                         class="fa fa-user-circle-o" style="font-size:16px"></i> Meus dados</a>
                             </li>
                             <li class="divider"></li>
