--- a/login/templates/registration/login.html
+++ b/login/templates/registration/login.html
@@ -13,7 +13,7 @@
                 <input class="form-control" placeholder="Senha" type="password" name="password" required
                        id="id_password"/>
                 <br>
-                <input type="submit" class="btn btn-primary" value="Login"><em class="pull-right">Sem login? <a
+                <input type="submit" class="btn btn-success" value="Login"><em class="pull-right">Sem login? <a
                     href="{% url 'login_register' %}">Cadastre-se aqui!</a></em>
             </form>
         </div>
