--- a/login/templates/registration/register.html
+++ b/login/templates/registration/register.html
@@ -10,7 +10,9 @@
                 {% csrf_token %}
                 {{ form.as_p }}
                 <br>
-                <input type="submit" class="btn btn-primary" value="Cadastrar">
+                <input type="submit" class="btn btn-success" value="Cadastrar">
+                <input type="reset" class="btn btn-danger" value="Cancelar">
+
             </form>
         </div>
     </section>
