--- a/supermarket/templates/supermarket/novo_produto.html
+++ b/supermarket/templates/supermarket/novo_produto.html
@@ -1,5 +1,4 @@
 {% extends "layout.html" %}
-
 {% block titulo %}Novo produto - Mercado com desconto{% endblock %}
 
 
@@ -15,8 +14,8 @@
                     </div>
                 {% endfor %}
 
-                <input type="submit" class="btn btn-primary" value="Cadastrar">
-                <input type="button" class="btn btn-danger" value="Cancelar">
+                <input type="submit" class="btn btn-success" value="Cadastrar">
+                <input type="reset" class="btn btn-danger" value="Cancelar">
             </form>
         </div>
     </section>
