--- a/supermarket/templates/supermarket/sobre.html
+++ b/supermarket/templates/supermarket/sobre.html
@@ -5,7 +5,7 @@
 {% block principal %}
     <section class="section-content">
         <div class="container">
-            <h2 class="page-header">Sobre o Mercado com desconto</h2>
+            <h2 class="page-header">Sobre</h2>
             <p class="p">A Internet vem tomando proporções cada vez maiores e, com isso,
                 influenciando nosso cotidiano e modificando completamente o comportamento da sociedade. Uma das
                 grandes
