--- a/static/css/supermarket.css
+++ b/static/css/supermarket.css
@@ -30,6 +30,17 @@
     padding-right: 15px;
 }
 
+.modal-header, .close {
+    background-color: #195128;
+    color: white !important;
+    text-align: center;
+    font-size: 30px;
+}
+
+.modal-footer {
+    background-color: #f9f9f9;
+}
+
 html {
     font-size: 10px;
     -webkit-tap-highlight-color: transparent;
